# Jobfit-aiagent-using-crewai

./: .gitignore  .python-version  README.md  pyproject.toml
knowledge/: job1.md  job2.md  job3.md  resume.md
src/latest_ai_development/: crew.py  main.py
src/latest_ai_development/config/: agents.yaml  tasks.yaml
src/latest_ai_development/tools/: custom_tool.py
